--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -12,3 +12,10 @@ interface=eth0
 # repeat this for each network on which you want to supply DHCP
 # service.
 dhcp-range=192.168.2.2,192.168.2.150,12h
+
+# If you don't want dnsmasq to read /etc/hosts, uncomment the
+# following line.
+#no-hosts
+# or if you want it to read another file, as well as /etc/hosts, use
+# this.
+addn-hosts=/etc/hosts-adv
